# LambdaJS

./: .gitignore  AUTHORS  LICENSE  README  README.md
ADsafe/: ADsafe.cabal
ADsafe/src/: ADsafe.hs
ADsafe/src/BrownPLT/JavaScript/ADsafe/: DisableBanned.hs  DisableEval.hs  DisableWindow.hs  JSLint.hs  MakeableTags.hs  SimplifyIf.hs  Transformation.hs
DisableXHR/: DisableXHR.cabal  LambdaJS-DisableXHR  test.out
DisableXHR/src/: AdsafeBlacklist.hs  AdsafeBlacklist.hs.~1~  DisableXHR.hs  MakeSafeSubset.hs
LambdaJS/: LambdaJS.cabal  checktypes.js  desugar.sh  es3.env  out.test  pretty-print.js  run.sh
LambdaJS/Tests/: all_spidermonkey_tests.sh  impl.lambdajs  impl.lambdajs.anf  impl.rhino  onedir_spidermonkey_tests.sh  run_onefile_many.js  spidermonkey_test.sh
LambdaJS/Tests/SpiderMonkey/: Readme.txt  shell.js
LambdaJS/Tests/SpiderMonkey/Array/: regress-430717.js
LambdaJS/Tests/UnitTests/: arrays.tst  basic.tst  delete.tst  exceptions.tst  functions.tst  objects.tst  operators.tst  strings.tst  trycatch.tst  with.tst
LambdaJS/src/: LambdaJS.hs
LambdaJS/src/BrownPLT/JavaScript/Analysis/: AlphaRename.hs  FreeVars.hs  MergeSequences.hs  Pure.hs  PushDown.hs  RemoveUnused.hs
LambdaJS/src/BrownPLT/JavaScript/Semantics/: ANF.hs  AssignableVars.hs  Desugar.hs  DesugarWith.hs  ECMAEnvironment.hs  FreeVars.hs  LiftFuncStmts.hs  LocalVars.hs  Parser.hs  Prelude.hs  PrettyPrint.hs  RemoveHOAS.hs  Syntax.hs
LambdaJS/src/LambdaJS/: Lexer.hs  Parser.hs
LambdaJS/src/Language/LambdaJS/: ECMAEnvironment.hs  Lexer.hs  PrettyPrint.hs
Paper Examples/: Safe Subset.txt  array-processing.js  constructors.js  dog-lab.js  functions-as-objects.js  functions-objects-state.ss  globals.html  instanceof.js  js  locals.js  primitives.js  this.html  unsafe-lookup.html
Paper Examples/Testing Adequacy/: Testing with Chrome.txt  Testing with Firefox.txt  Testing with Rhino.txt
Redex/: direct-tests.ss  interp-shell.ss  interp.ss  js-delta.ss  js-redex-testing.ss  jscore.ss  redex-shell.ss  test-shell.ss
coq/: Datatypes.v  LambdaJS.v  LambdaJS_Defs.v  LambdaJS_Tactics.v  ListExt.v  SfLib.v  _CoqProject  configure
haskell/: LambdaJS.cabal  desugar.sh  interp.sh  unit-test-one.sh  unit-test.sh
haskell/Tests/: assemble_spidermonkey_test.py  spidermonkey_test.sh
haskell/Tests/RemovedTests/: README.txt
haskell/Tests/SpiderMonkey/Array/: 15.4.4.11-01.js
haskell/Tests/UnitTests/: basic.tst  delete.tst  forin.tst  math.tst  with.tst  with2.tst
haskell/data/: prelude.js
haskell/src/: LambdaJS.hs
haskell/src/Language/LambdaJS/: AssignableVars.hs  Desugar.hs  DesugarWith.hs  ECMAEnvironment.hs  LiftFuncStmts.hs  LocalVars.hs  Parser.hs  Prelude.hs  RemoveHOAS.hs  Syntax.hs
