Name:           ADsafe
Version:        1.0
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2009 Arjun Guha and Claudiu Saftoiu
License:        GPL
License-file:   ../LICENSE
Author:         Spiridon Eliopoulos
Maintainer:     Spiridon Eliopoulos <seliopou@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/~seliopou
Stability:      experimental
Category:       Language
Build-Type:     Custom
Synopsis:       ADsafe analysis
Description:


Library
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    containers >= 0.1,
    syb >= 0.1,
    WebBits >= 2.1,
    LambdaJS >= 1.1,
    parsec >= 2.1.0.0 && < 3
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
    Generics DeriveDataTypeable ScopedTypeVariables
    FlexibleInstances FlexibleContexts GeneralizedNewtypeDeriving
  Exposed-Modules:
    BrownPLT.JavaScript.ADsafe.Transformation

Executable adsafe
  Main-Is: ADsafe.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    containers >= 0.1,
    syb >= 0.1,
    WebBits >= 2.1,
    LambdaJS >= 1.1,
    parsec >= 2.1.0.0 && < 3
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
    Generics DeriveDataTypeable ScopedTypeVariables
    FlexibleInstances FlexibleContexts GeneralizedNewtypeDeriving
