Name:           LambdaJS
Version:        1.2
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2009--2012 Brown University and Claudiu Saftoiu
License:        BSD3
License-file:   ../LICENSE
Author:         Arjun Guha, Claudiu Saftoiu
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/~arjun/
Stability:      experimental
Category:       Language
Build-Type:     Custom
Synopsis:       Compiler from JavaScript to LambdaJS.
Description:

Library
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    parsec >= 3.0.0,
    pretty >= 0.1, 
    containers >= 0.1,
    syb >= 0.1,
    WebBits >= 2.1
  ghc-options:
    -fwarn-incomplete-patterns 
  Extensions:     
    DeriveDataTypeable Rank2Types FlexibleInstances
  Exposed-Modules:
    Language.LambdaJS.Desugar
    Language.LambdaJS.ECMAEnvironment
    Language.LambdaJS.DesugarWith
    Language.LambdaJS.LiftFuncStmts
    Language.LambdaJS.PrettyPrint
    Language.LambdaJS.LocalVars
    Language.LambdaJS.Syntax
    Language.LambdaJS.RemoveHOAS
    Language.LambdaJS.AssignableVars
  Other-Modules:
    Language.LambdaJS.Prelude

Executable lambdaJS
  Main-Is: LambdaJS.hs
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    parsec >= 3.0.0,
    pretty >= 0.1, 
    containers >= 0.1,
    syb >= 0.1,
    WebBits >= 2.1
  ghc-options:
    -fwarn-incomplete-patterns -rtsopts
  Extensions:     
    DeriveDataTypeable Rank2Types FlexibleInstances
